src/objects/fferpcore__Company__c.object
<CustomObject>
    <customHelpPage>fferpcore__CompanyHelp</customHelpPage>
    <description>Stores the company details.</description>
    <fields>
        <fullName>c2g__msg_link_ffa_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>ERP Company</relationshipLabel>
        <relationshipName>ERPCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplateBillingDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of Conga Template for Billing Document</description>
        <inlineHelpText>ID of Conga Template for Billing Document</inlineHelpText>
        <label>Billing Document</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Companies (Billing Document)</relationshipLabel>
        <relationshipName>CompaniesBillingDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Code__c</fullName>
        <description>Company code in the Avatax account to which documents are to be posted. If this field does not contain a value, documents are assigned to the default company.</description>
        <inlineHelpText>Company code in the Avatax account to which documents are to be posted. If this field does not contain a value, documents are assigned to the default company.</inlineHelpText>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Correlation Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fferpcore__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsAddressValidated__c</fullName>
        <description>Indicates whether the company address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(fferpcore__Street__c) &amp;&amp;
              ISBLANK(fferpcore__City__c) &amp;&amp;
              ISBLANK(fferpcore__State__c) &amp;&amp;
              ISBLANK(fferpcore__Zip__c) &amp;&amp;
              ISBLANK(fferpcore__Country__c)
            ) &amp;&amp;
            ( fferpcore__Street__c  =  fferpcore__ValidatedStreet__c ) &amp;&amp;
            ( fferpcore__City__c =  fferpcore__ValidatedCity__c ) &amp;&amp;
            ( fferpcore__State__c =  fferpcore__ValidatedState__c ) &amp;&amp;
            ( fferpcore__Zip__c =  fferpcore__ValidatedZip__c ) &amp;&amp;
            ( fferpcore__Country__c =  fferpcore__ValidatedCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the company address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__LogoURL__c</fullName>
        <description>URL of the company&apos;s logo.</description>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Logo__c</fullName>
        <description>Formula field that displays the company logo specified in the Logo URL.</description>
        <formula>IF(LEN(fferpcore__LogoURL__c)=0,&quot;&quot;, IMAGE(fferpcore__LogoURL__c,&quot;Company Logo&quot;))</formula>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>fferpcore__State__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the tax information for this company.</description>
        <inlineHelpText>Lookup to the tax information for this company.</inlineHelpText>
        <label>Tax Information</label>
        <referenceTo>fferpcore__CompanyTaxInformation__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__UniquenessConstraint__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedCity__c</fullName>
        <label>Validated City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedCountry__c</fullName>
        <label>Validated Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedState__c</fullName>
        <label>Validated State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedStreet__c</fullName>
        <label>Validated Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedZip__c</fullName>
        <label>Validated Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Website__c</fullName>
        <description>URL of the company&apos;s website.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fferpcore__Zip__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>